2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>

	* src/Makefile.am: Rename uuencode/uudecode to
	gmime-uuencode/decode to prevent naming collisions with the GNU
	Sharutils tools. Fixes bug #667073.

2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Fixed returns
	without a return value. Also fixed up some error-handling.

2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (rfc2047_decode_tokens): Fixed a memory leak.

2011-12-23  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.3

2011-12-18  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (quoted_decode): Made more robust and also
	modified to keep state (e.g. for use when triplets span across
	multiple encoded-word tokens).
	(tokenize_rfc2047_phrase): Tokenizes a rfc822 phrase header for
	later processing.
	(tokenize_rfc2047_text): Tokenizes a rfc822 unstructured text
	header for later processing.
	(rfc2047_decode_tokens): Merge and decode rfc2047 tokens,
	converting the decoded text into UTF-8.
	(g_mime_utils_header_decode_phrase): Rewritten to use the above
	functions.
	(g_mime_utils_header_decode_text): Same.

2011-12-18  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (charset_convert): Don't count the
	terminating nul character in the returned string length.

2011-12-17  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.2

2011-12-15  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-iconv-utils.c (g_mime_iconv_strndup): Same.

	* gmime/gmime-filter-charset.c (flter_complete): Same as
	charset_convert().

	* gmime/gmime-utils.c (charset_convert): Make sure the output
	buffer is large enough when flushing the conversion descriptor.

2011-12-15  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime.c (g_mime_init): Don't initialize the crypto types
	unless crypto was enabled in the build.
